# omniwatcher

./: LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: azure-resource-abbreviations.md  case-study-observer.md  docs-header-maintenance.md  harness-format-enforcement.md  markdown-line-length.md  python-style.md  rule-scoping-decisions.md  skill-matching-redirects.md  technology-picks-research.md  typescript-style.md
.claude/skills/case-study-capture/: SKILL.md
.claude/skills/case-study-synthesize/: SKILL.md
.claude/skills/vet-dependency/: SKILL.md
.github/workflows/: skill-tests.yml
case-study-harness/: .gitignore  install.py  pyproject.toml
case-study-harness/claude/skills/case-study-capture/scripts/: write_manual_entry.py
case-study-harness/claude/skills/case-study-synthesize/scripts/: read_observations.py
case-study-harness/docs/: architecture.md  interview-summary.md  phase-plan.md  prd.md
case-study-harness/hooks/: post-commit
case-study-harness/scripts/: log_friction.py  log_git_harness_change.py  log_harness_change.py  log_session_end.py  log_tool_use.py  log_turn_summary.py  log_user_prompt.py
contracts/: api.yaml
docs/: architecture.md  brand-identity.md  interview-summary.md  prd.md  ux-spec.md
templates/: CLAUDE.md
templates/.claude/: README.md  settings.json
templates/contracts/: README.md  openapi-stub.yaml
templates/docs/: README.md  architecture-template.md  brand-identity-template.md  interview-summary-template.md  prd-template.md  ux-spec-template.md
templates/scripts/: integration-smoke-test.sh
(+15 files in other folders)
